--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -310,6 +310,10 @@ small {
   -webkit-animation: pulse 1.5s infinite;
 }
 
+.pulse {
+  animation: 1s pulse infinite;
+}
+
 @keyframes pulse {
   0% {
     transform: scale(1);
@@ -317,7 +321,7 @@ small {
   }
 
   70% {
-    transform: scale(1.2);
+    transform: scale(1.1);
     box-shadow: 0 0 0 10px rgba(255, 121, 63, 0);
   }
 
